--- a/powerapps/CanvasManifest.json
+++ b/powerapps/CanvasManifest.json
@@ -101,7 +101,7 @@
       "zeroalltabindexes": true
     },
     "Author": "",
-    "BindingErrorCount": 0,
+    "BindingErrorCount": 1,
     "ContainsThirdPartyPcfControls": false,
     "DefaultConnectedDataSourceMaxGetRowsCount": 500,
     "DocumentAppType": "DesktopOrTablet",
@@ -135,6 +135,7 @@
   },
   "ScreenOrder": [
     "home",
+    "detailView",
     "contactus",
     "privacy",
     "accesibility",
