--- a/powerapps/Src/home.fx.yaml
+++ b/powerapps/Src/home.fx.yaml
@@ -117,6 +117,26 @@ home As screen:
             Y: =411
             ZIndex: =7
 
+        magic As button:
+            Fill: =RGBA(56, 96, 178, 0)
+            Height: =506
+            HoverBorderColor: |-
+                =//ColorFade(Self.BorderColor, 20%)
+                RGBA(0,0,0,0)
+            HoverColor: =RGBA(255, 255, 255, 0)
+            HoverFill: |-
+                =//ColorFade(RGBA(56, 96, 178, 1), -20%)
+                RGBA(0,0,0,0)
+            OnSelect: =Navigate(detailView)
+            PressedFill: |-
+                =//Self.Color
+                RGBA()
+            Text: =""
+            Width: =408
+            X: =16
+            Y: =16
+            ZIndex: =8
+
     Group2 As group:
         Height: =5
         Width: =5
