--- a/powerapps/Src/accesibility.fx.yaml
+++ b/powerapps/Src/accesibility.fx.yaml
@@ -8,28 +8,39 @@ accesibility As screen:
         ZIndex: =14
 
         Rectangle1_2 As rectangle:
-            BorderColor: =RGBA(102, 102, 102, 1)
+            AccessibleLabel: ="Header"
+            BorderColor: =RGBA(0,0,0,0)
             Fill: =RGBA(64,64,64,1)
             Height: =150
             Width: =1366
             ZIndex: =1
 
         Rectangle2_1 As rectangle:
+            AccessibleLabel: ="Header"
+            BorderColor: =RGBA(0,0,0,0)
             Fill: =RGBA(0,0,0,1)
             Height: =50
+            TabIndex: =0
             Width: =1366
             ZIndex: =3
 
         Image2_1 As image:
+            AccessibleLabel: ="Ontario logo"
+            BorderColor: =RGBA(0,0,0,0)
             Height: =50
             Image: =ON_REV_LOGO_RGB
+            TabIndex: =0
+            Tooltip: ="Ontario logo"
             Width: =133
             ZIndex: =4
 
         Label1_6 As label:
             Align: =Align.Center
+            BorderColor: =RGBA(0,0,0,0)
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
+            TabIndex: =0
             Text: ="Hi, " & User().FullName
             Width: =476
             X: =890
@@ -37,12 +48,15 @@ accesibility As screen:
             ZIndex: =5
 
         Label1_7 As label:
+            BorderColor: =RGBA(0,0,0,0)
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             FontWeight: =FontWeight.Bold
             Height: =100
             OnSelect: =Navigate(home)
             Size: =25
+            TabIndex: =0
             Text: ="All Things Movies and TV App"
             Width: =735
             X: =15
@@ -58,18 +72,21 @@ accesibility As screen:
 
         Rectangle1_3 As rectangle:
             Fill: =RGBA(0,0,0,1)
+            FocusedBorderThickness: =1
             Height: =80
             Width: =1366
             Y: =688
             ZIndex: =2
 
         Image3_1 As image:
+            FocusedBorderThickness: =1
             Height: =93
             Image: ='1200px-Triangle-grey.svg'
             Y: =675
             ZIndex: =8
 
         Image4_1 As image:
+            FocusedBorderThickness: =1
             Height: =66
             Image: ='1200px-Triangle-grey.svg'
             ImageRotation: =ImageRotation.Rotate180
@@ -81,9 +98,12 @@ accesibility As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(accesibility)
             Size: =10
+            TabIndex: =0
             Text: ="Accessibility" 
+            Underline: =true
             Width: =125
             X: =73
             Y: =688
@@ -93,9 +113,12 @@ accesibility As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(privacy)
             Size: =10
+            TabIndex: =0
             Text: ="Privacy"
+            Underline: =true
             Width: =125
             X: =198
             Y: =688
@@ -105,9 +128,12 @@ accesibility As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(contactus)
             Size: =10
+            TabIndex: =0
             Text: ="Contact us"
+            Underline: =true
             Width: =125
             X: =323
             Y: =688
@@ -117,9 +143,11 @@ accesibility As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: |-
                 =Launch("https://www.ontario.ca/page/copyright-information")
             Size: =10
+            TabIndex: =0
             Text: ="© King's Printer for Ontario, 2012–24"
             Width: =314
             X: =100
@@ -127,8 +155,10 @@ accesibility As screen:
             ZIndex: =13
 
     Icon1 As icon.BackArrow:
+        AccessibleLabel: ="Back"
         Icon: =Icon.BackArrow
         OnSelect: =Back()
+        TabIndex: =0
         X: =18
         Y: =189
         ZIndex: =16
@@ -146,7 +176,7 @@ accesibility As screen:
             Height: =247
             Size: =17
             Text: |-
-                ="Hi! This is our accessibility page.
+                ="Hi! This is our Accessibility page.
                 If you want to learn more, please, click on the button below"
             Width: =568
             X: =399
