--- a/powerapps/Src/directEmail.fx.yaml
+++ b/powerapps/Src/directEmail.fx.yaml
@@ -1,6 +1,7 @@
 "directEmail As screen.'tabletLayout_Email_ver3.0'":
 
     iconMail1 As icon.Send:
+        AccessibleLabel: ="Send email"
         Color: |-
             =//RGBA(255, 255, 255, 1)
             RGBA(56, 96, 178, 1)
@@ -24,6 +25,7 @@
         PaddingLeft: =14
         PaddingRight: =14
         PaddingTop: =14
+        TabIndex: =0
         Tooltip: ="Send message"
         X: =1302
         Y: =624
@@ -63,6 +65,7 @@
         ZIndex: =11
 
     AddIcon1 As icon.Add:
+        AccessibleLabel: ="Add"
         Height: =TextSearchBox1.Height
         Icon: =Icon.Add
         OnSelect: |-
@@ -98,6 +101,7 @@
             MyPeople
         Layout: =Layout.Vertical
         ShowScrollbar: =Self.Height >= 182
+        TabIndex: =0
         TemplateSize: =42
         Width: =1239
         WrapCount: =4
@@ -196,6 +200,7 @@
             =/*Only use Office 365 Users operation if user has started searching*/
             If(!IsBlank(Trim(TextSearchBox1.Text)), Office365Users.SearchUser({searchTerm: Trim(TextSearchBox1.Text), top: 15}))
         Layout: =Layout.Vertical
+        TabIndex: =0
         TemplatePadding: =0
         TemplateSize: =104
         Visible: =!IsBlank(Trim(TextSearchBox1.Text))
@@ -205,12 +210,14 @@
         ZIndex: =18
 
         Rectangle4 As rectangle:
+            AccessibleLabel: ="List of emails"
             BorderColor: =Title2.Color
             BorderThickness: =If(ThisItem.UserPrincipalName in MyPeople.UserPrincipalName, 4, 0)
             Fill: =RGBA(0,0,0,0)
             Height: =Parent.TemplateHeight
             HoverFill: =RGBA(0,0,0,0)
             OnSelect: =Select(Title2)
+            TabIndex: =0
             Width: =Parent.TemplateWidth
             ZIndex: =1
 
@@ -237,6 +244,7 @@
             FocusedBorderThickness: =2
             OnSelect: =Select(Title2)
             Size: =17
+            TabIndex: =0
             Text: =ThisItem.UserPrincipalName
             Width: =PeopleBrowseGallery1.TemplateWidth - 2 * Self.X
             Wrap: =false
@@ -266,8 +274,10 @@
             ZIndex: =1
 
         Rectangle2_4 As rectangle:
+            AccessibleLabel: ="Header"
             Fill: =RGBA(0,0,0,1)
             Height: =50
+            TabIndex: =0
             Width: =1366
             ZIndex: =2
 
@@ -290,10 +300,12 @@
         Label1_25 As label:
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             FontWeight: =FontWeight.Bold
             Height: =100
             OnSelect: =Navigate(home)
             Size: =25
+            TabIndex: =0
             Text: ="All Things Movies and TV App"
             Width: =735
             X: =15
@@ -301,8 +313,10 @@
             ZIndex: =5
 
     Icon1_3 As icon.BackArrow:
+        AccessibleLabel: ="Back"
         Icon: =Icon.BackArrow
         OnSelect: =Back()
+        TabIndex: =0
         X: =18
         Y: =189
         ZIndex: =26
@@ -339,9 +353,12 @@
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(accesibility)
             Size: =10
+            TabIndex: =0
             Text: ="Accessibility" 
+            Underline: =true
             Width: =125
             X: =73
             Y: =688
@@ -351,9 +368,12 @@
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(privacy)
             Size: =10
+            TabIndex: =0
             Text: ="Privacy"
+            Underline: =true
             Width: =125
             X: =198
             Y: =688
@@ -363,9 +383,12 @@
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(contactus)
             Size: =10
+            TabIndex: =0
             Text: ="Contact us"
+            Underline: =true
             Width: =125
             X: =323
             Y: =688
@@ -375,9 +398,11 @@
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: |-
                 =Launch("https://www.ontario.ca/page/copyright-information")
             Size: =10
+            TabIndex: =0
             Text: ="© King's Printer for Ontario, 2012–24"
             Width: =314
             X: =100
