--- a/powerapps/Src/privacy.fx.yaml
+++ b/powerapps/Src/privacy.fx.yaml
@@ -1,8 +1,10 @@
 privacy As screen:
 
     Icon1_1 As icon.BackArrow:
+        AccessibleLabel: ="Back"
         Icon: =Icon.BackArrow
         OnSelect: =Back()
+        TabIndex: =0
         X: =18
         Y: =189
         ZIndex: =14
@@ -22,8 +24,11 @@ privacy As screen:
             ZIndex: =1
 
         Rectangle2_2 As rectangle:
+            AccessibleLabel: ="Header"
             Fill: =RGBA(0,0,0,1)
             Height: =50
+            TabIndex: =0
+            Tooltip: ="Header"
             Width: =1366
             ZIndex: =3
 
@@ -46,10 +51,12 @@ privacy As screen:
         Label1_13 As label:
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             FontWeight: =FontWeight.Bold
             Height: =100
             OnSelect: =Navigate(home)
             Size: =25
+            TabIndex: =0
             Text: ="All Things Movies and TV App"
             Width: =735
             X: =15
@@ -65,18 +72,21 @@ privacy As screen:
 
         Rectangle1_5 As rectangle:
             Fill: =RGBA(0,0,0,1)
+            FocusedBorderThickness: =1
             Height: =80
             Width: =1366
             Y: =688
             ZIndex: =2
 
         Image3_2 As image:
+            FocusedBorderThickness: =1
             Height: =93
             Image: ='1200px-Triangle-grey.svg'
             Y: =675
             ZIndex: =8
 
         Image4_2 As image:
+            FocusedBorderThickness: =1
             Height: =66
             Image: ='1200px-Triangle-grey.svg'
             ImageRotation: =ImageRotation.Rotate180
@@ -88,9 +98,12 @@ privacy As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(accesibility)
             Size: =10
+            TabIndex: =0
             Text: ="Accessibility" 
+            Underline: =true
             Width: =125
             X: =73
             Y: =688
@@ -100,9 +113,12 @@ privacy As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(privacy)
             Size: =10
+            TabIndex: =0
             Text: ="Privacy"
+            Underline: =true
             Width: =125
             X: =198
             Y: =688
@@ -112,9 +128,12 @@ privacy As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: =Navigate(contactus)
             Size: =10
+            TabIndex: =0
             Text: ="Contact us"
+            Underline: =true
             Width: =125
             X: =323
             Y: =688
@@ -124,9 +143,11 @@ privacy As screen:
             Align: =Align.Center
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
+            FocusedBorderThickness: =1
             OnSelect: |-
                 =Launch("https://www.ontario.ca/page/copyright-information")
             Size: =10
+            TabIndex: =0
             Text: ="© King's Printer for Ontario, 2012–24"
             Width: =314
             X: =100
