--- a/powerapps/Src/home.fx.yaml
+++ b/powerapps/Src/home.fx.yaml
@@ -150,6 +150,7 @@ home As screen:
             BorderColor: =RGBA(102, 102, 102, 1)
             Fill: =RGBA(64,64,64,1)
             Height: =150
+            Tooltip: ="Header"
             Width: =1366
             ZIndex: =1
 
@@ -158,6 +159,7 @@ home As screen:
             Fill: =RGBA(0,0,0,1)
             Height: =50
             TabIndex: =0
+            Tooltip: ="Header"
             Width: =1366
             ZIndex: =3
 
@@ -173,6 +175,7 @@ home As screen:
             Color: =RGBA(241, 244, 249, 1)
             Fill: =RGBA(255, 255, 255, 0)
             Text: ="Hi, " & User().FullName
+            Tooltip: ="Your name, HI!"
             Width: =476
             X: =890
             Y: =5
@@ -204,6 +207,7 @@ home As screen:
         Rectangle1_1 As rectangle:
             Fill: =RGBA(0,0,0,1)
             Height: =80
+            Tooltip: ="Footer"
             Width: =1366
             Y: =688
             ZIndex: =2
